finished task: some code refactoring 2024-02-09
